--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     .card { background:var(--panel); border:1px solid #222833; border-radius:14px; padding:12px; }
     label { display:block; font-size:12px; color:var(--muted); margin-bottom:4px; }
     input[type="number"], input[type="text"], select { width:100%; padding:10px 12px; border-radius:10px; border:1px solid #2a3040; background:#0f1116; color:var(--ink); }
-    button { padding:10px 12px; border-radius:10px; border:1px solid #2a3040; background:#0f1116; color:var(--ink); cursor:pointer; }
+    button { padding:10px 12px; border-radius:10px; border:1px solid #2a3040; background:#0f1116; color:#e6e7eb; cursor:pointer; }
     button.primary { background:var(--accent); color:#0b0c10; border-color:#2c3e89; font-weight:600; }
     button:disabled { opacity:.6; cursor:not-allowed; }
     .row { display:grid; grid-template-columns: 1fr 1fr; gap:8px; margin-bottom:8px; }
@@ -153,6 +153,11 @@
   };
   const setStatus = s => els.status.textContent = s;
 
+  // show any runtime JS error in the status line
+  window.addEventListener('error', (e) => {
+    els.status.textContent = 'JS error: ' + (e.message || e.error || 'unknown');
+  });
+
   // ====== Bundled state ======
   const bundled = { base:"", items:[], loaded:false };
 
@@ -164,7 +169,6 @@
   els.dataSource.addEventListener('change', toggleBundledUI);
 
   function deriveBaseFromUrl(url){
-    // remove filename -> directory
     const slash = url.lastIndexOf('/');
     return slash >= 0 ? url.slice(0, slash) : '';
   }
@@ -207,10 +211,10 @@
   els.loadManifestBtn.addEventListener('click', loadManifest);
 
   // ====== Helpers ======
-  function normalizeCRLF(s){ return (s || "").replace(/
-(?!
-)/g, '
-'); }
+  function normalizeCRLF(s){
+    // convert lone CR to CRLF; leave existing CRLF as-is
+    return (s || "").replace(/\r(?!\n)/g, "\r\n");
+  }
 
   // ====== Remote directory & file discovery ======
   async function getDirs(){
@@ -308,13 +312,11 @@
   const printableSet = "#ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789:;.,-'()/&$?! ";
   const replacementMap = {
     '"':"'", '=':'-', '*':'X', '_':'-', '@':'A', '%':'O',
-    '[':'(', ']':')', '{':'(', '}':')', '\':'/', '^':'-', '|':'/',
+    '[':'(', ']':')', '{':'(', '}':')', '\\\\':'/', '^':'-', '|':'/',
     '`':"'", '~':'-', '<':'(', '>':')'
   };
   const normalizeChar = ch => {
-    if (ch === '
-' || ch === '
-') return ch; // keep CR/LF
+    if (ch === '\r' || ch === '\n') return ch; // keep CR/LF
     const u = ch.toUpperCase();
     const safe = replacementMap[u] || replacementMap[ch] || u;
     return printableSet.includes(safe) ? safe : ' ';
@@ -327,40 +329,31 @@
       'A':0b00011,'B':0b11001,'C':0b01110,'D':0b01001,'E':0b00001,'F':0b01101,'G':0b11010,'H':0b10100,
       'I':0b00110,'J':0b01011,'K':0b01111,'L':0b10010,'M':0b11100,'N':0b01100,'O':0b11000,'P':0b10110,
       'Q':0b10111,'R':0b01010,'S':0b00101,'T':0b10000,'U':0b00111,'V':0b11110,'W':0b10011,'X':0b11101,
-      'Y':0b10101,'Z':0b10001,'
-':0b01000,'
-':0b00010,' ':0b00100
+      'Y':0b10101,'Z':0b10001,'\r':0b01000,'\n':0b00010,' ':0b00100
     },
     FIGS: {
       '-':0b00011,'?':0b11001,':':0b01110,'$':0b01001,'3':0b00001,'!':0b01101,'&':0b11010,'#':0b10100,
       '8':0b00110,"'":0b01011,'(':0b01111,')':0b10010,'.':0b11100,',':0b01100,'9':0b11000,'0':0b10110,
       '1':0b10111,'4':0b01010,'Bell':0b00101,'5':0b10000,'7':0b00111,';':0b11110,'2':0b10011,'/':0b11101,
-      '6':0b10101,'+':0b10001,'
-':0b01000,'
-':0b00010,' ':0b00100
+      '6':0b10101,'+':0b10001,'\r':0b01000,'\n':0b00010,' ':0b00100
     }
   };
 
   const GUARD_SHIFT_BITS = 0.0, GUARD_CR_BITS = 0.0, GUARD_LF_BITS = 0.0, LINE_LEAD_MS = 0, START_LEAD_MS = 0, DEFAULT_STRETCH = 1.002;
   function buildBaudotFramesFromText(text){
     const frames=[]; let currentShift=null; let lastWasCR=false;
-    frames.push({type:'char', code: BAUDOT_TABLE.LTRS['
-'], guardBits: GUARD_CR_BITS});
-    frames.push({type:'char', code: BAUDOT_TABLE.LTRS['
-'], guardBits: GUARD_LF_BITS});
+    frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\r'], guardBits: GUARD_CR_BITS});
+    frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\n'], guardBits: GUARD_LF_BITS});
     frames.push({type:'char', code: LTRS, guardBits: GUARD_SHIFT_BITS});
     if (START_LEAD_MS>0) frames.push({type:'hold', sec: START_LEAD_MS/1000});
     for (const raw of text){
       const ch = normalizeChar(raw);
-      if (ch==='
-'){ frames.push({type:'char', code: BAUDOT_TABLE.LTRS['
-'], guardBits: GUARD_CR_BITS}); lastWasCR=true; continue; }
-      if (ch==='
-'){
-        if (!lastWasCR) frames.push({type:'char', code: BAUDOT_TABLE.LTRS['
-'], guardBits: GUARD_CR_BITS});
-        frames.push({type:'char', code: BAUDOT_TABLE.LTRS['
-'], guardBits: GUARD_LF_BITS}); lastWasCR=false; if (LINE_LEAD_MS>0) frames.push({type:'hold', sec: LINE_LEAD_MS/1000}); continue;
+      if (ch==='\r'){ frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\r'], guardBits: GUARD_CR_BITS}); lastWasCR=true; continue; }
+      if (ch=== '\n'){
+        if (!lastWasCR) frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\r'], guardBits: GUARD_CR_BITS});
+        frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\n'], guardBits: GUARD_LF_BITS}); lastWasCR=false;
+        if (LINE_LEAD_MS>0) frames.push({type:'hold', sec: LINE_LEAD_MS/1000});
+        continue;
       }
       lastWasCR=false; let needed=null;
       if (ch in BAUDOT_TABLE.LTRS) needed='LTRS'; else if (ch in BAUDOT_TABLE.FIGS) needed='FIGS'; else continue;
@@ -368,10 +361,8 @@
       frames.push({type:'char', code: BAUDOT_TABLE[needed][ch]});
     }
     if (currentShift!=='LTRS') frames.push({type:'char', code: LTRS, guardBits: GUARD_SHIFT_BITS});
-    frames.push({type:'char', code: BAUDOT_TABLE.LTRS['
-'], guardBits: GUARD_CR_BITS});
-    frames.push({type:'char', code: BAUDOT_TABLE.LTRS['
-'], guardBits: GUARD_LF_BITS});
+    frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\r'], guardBits: GUARD_CR_BITS});
+    frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\n'], guardBits: GUARD_LF_BITS});
     return frames;
   }
 
@@ -387,135 +378,4 @@
   function afskFromFrames(frames, opts){
     const { baud, mark, space, stopBits, sampleRate, stretch = DEFAULT_STRETCH } = opts;
     const twoPi = 2*Math.PI; const spbF = (sampleRate/baud)*stretch; let carry=0, phase=0; const out=[];
-    const emit=(freq, units)=>{ let total = spbF*units + carry; let n = Math.floor(total); carry = total - n; const inc = twoPi*freq/sampleRate; for(let i=0;i<n;i++){ out.push(Math.sin(phase)); phase+=inc; if (phase>=twoPi) phase-=twoPi; } };
-    for (const f of frames){ if (f.type==='hold'){ emit(opts.mark, f.sec*baud); continue; } if (f.type==='char'){ const code=f.code & 0x1F; emit(space,1); for(let i=0;i<5;i++){ const bit=(code>>i)&1; emit(bit?mark:space,1);} emit(mark, stopBits); if (f.guardBits&&f.guardBits>0) emit(mark, f.guardBits); } }
-    emit(mark,2.0); return out;
-  }
-
-  function encodeWav(samples, sampleRate){
-    const buffer = new ArrayBuffer(44 + samples.length*2); const view = new DataView(buffer);
-    const putStr=(o,s)=>{ for(let i=0;i<s.length;i++) view.setUint8(o+i, s.charCodeAt(i)); };
-    putStr(0,'RIFF'); view.setUint32(4, 36 + samples.length*2, true);
-    putStr(8,'WAVE');
-    putStr(12,'fmt '); view.setUint32(16,16,true);
-    view.setUint16(20,1,true); view.setUint16(22,1,true);
-    view.setUint32(24,sampleRate,true); view.setUint32(28,sampleRate*2,true);
-    view.setUint16(32,2,true); view.setUint16(34,16,true);
-    putStr(36,'data'); view.setUint32(40, samples.length*2, true);
-    for(let i=0;i<samples.length;i++){
-      const s=Math.max(-1,Math.min(1,samples[i]))*32767;
-      view.setInt16(44+i*2, s|0, true);
-    }
-    return buffer;
-  }
-
-  // ====== Build one big WAV (silence between pieces; full text) ======
-  els.buildBtn.addEventListener('click', async () => {
-    try{
-      els.buildBtn.disabled = true; els.downloadWrap.textContent = ""; els.player.src = "";
-      const n = Math.max(1, Math.min(500, parseInt(els.count.value||"25",10)));
-      const gapSec = Math.max(0, parseFloat(els.gap.value||"2"));
-
-      setStatus('Sampling artwork…');
-      const picks = await sampleRandomArt(n);
-      if (!picks.length){ setStatus('No items to process'); return; }
-
-      // Render list
-      els.list.innerHTML = picks.map(p=>{
-        const href = (els.dataSource.value==='bundled' && bundled.base) ? `${bundled.base}/${p.pagePath}` : (p.originUrl||p.pagePath);
-        return `<li><a href="${href}" target="_blank" rel="noopener">${p.dir}/${p.filename}</a></li>`;
-      }).join('');
-      els.countInfo.textContent = `(${picks.length})`;
-
-      // Audio params
-      const baud  = parseFloat(els.baud.value||"45.45");
-      const stopB = parseFloat(els.stopBits.value||"1.5");
-      const mark  = parseFloat(els.mark.value||"2125");
-      const space = parseFloat(els.space.value||"2295");
-
-      const sr = getSampleRate();
-      const silence = new Float32Array(Math.max(0, Math.round(sr * gapSec))); // pure silence gap
-      const pcm = [];
-
-      let used = 0;
-      for (let i=0;i<picks.length;i++){
-        setStatus(`Fetching ${i+1}/${picks.length}… ${picks[i].dir}/${picks[i].filename}`);
-        let raw="";
-        if (els.dataSource.value === 'bundled') raw = await fetchArtTextBundled(picks[i].pagePath);
-        else raw = await fetchArtTextRemote(picks[i].pagePath);
-        if (!raw || !raw.trim()) continue; // skip empties
-        const text = normalizeText(raw);    // FULL TEXT
-        const frames = buildBaudotFramesFromText(text);
-        const sig = afskFromFrames(frames, { baud: baud, mark: mark, space: space, stopBits: stopB, sampleRate: sr });
-        if (sig.length){ pcm.push(new Float32Array(sig)); used++; }
-        if (gapSec > 0 && i < picks.length - 1) pcm.push(silence);
-      }
-
-      if (!used){ setStatus('All fetched items were empty or failed to parse.'); return; }
-
-      // Concatenate
-      setStatus('Encoding WAV…');
-      const total = pcm.reduce((acc,a)=>acc + a.length, 0);
-      const out = new Float32Array(total); let off=0; for (const a of pcm){ out.set(a, off); off += a.length; }
-      const wav = encodeWav(out, sr);
-      const blob = new Blob([wav], { type:'audio/wav' });
-      const url = URL.createObjectURL(blob);
-      els.player.src = url; els.player.load();
-      const minutes = (out.length/sr)/60;
-      document.getElementById('downloadWrap').innerHTML = `<a download="rtty_art_${used}.wav" href="${url}">Download WAV</a> · items: ${used} · duration ~ ${minutes.toFixed(1)} min · mode: ${els.dataSource.value}`;
-      setStatus('Ready');
-    }catch(e){
-      console.error(e); setStatus('Error: ' + (e.message||e));
-    }finally{
-      els.buildBtn.disabled = false;
-    }
-  });
-
-  // ====== Self-tests (unchanged + extras) ======
-  function runTests(){
-    const log=[]; const ok=(m)=>log.push('✅ '+m); const bad=(m)=>log.push('❌ '+m);
-    try{
-      const t1 = normalizeText("A\r\nB\C ~@%{}[]|^*");
-      if (!/A
-B\//.test(t1)) bad('normalizeText backslash→/ or CR/LF preservation failed'); else ok('normalizeText maps backslash→/ and preserves CR/LF');
-      if (!t1.includes('AO-()()/')) bad('replacement map for @,% ,{},[],|,^,* failed'); else ok('replacement map for @,% ,{},[],|,^,*');
-      const allowed = new Set((printableSet + "
-").split(''));
-      if ([...t1].some(ch => !allowed.has(ch))) bad('normalizeText emitted characters outside printable set'); else ok('normalizeText only emits allowed chars');
-      if (BAUDOT_TABLE.LTRS['A']!==0b00011) bad('BAUDOT LTRS A code wrong'); else ok('BAUDOT LTRS A');
-      if (!('1' in BAUDOT_TABLE.FIGS)) bad('BAUDOT FIGS 1 missing'); else ok('BAUDOT FIGS 1 present');
-      const frames = buildBaudotFramesFromText("HI
-");
-      if (frames.length<10) bad('frames too short'); else ok('frames built');
-      const fNums = buildBaudotFramesFromText("12
-");
-      const sawFIGS = fNums.some(f => f.type==='char' && f.code===FIGS);
-      if (!sawFIGS) bad('FIGS shift not emitted for digits'); else ok('FIGS shift emitted for digits');
-      const sig = afskFromFrames(frames, { baud:45.45, mark:2125, space:2295, stopBits:1.5, sampleRate:48000 });
-      if (!sig.length) bad('AFSK produced empty signal'); else ok('AFSK produced samples');
-      const wav = encodeWav(new Float32Array(sig), 48000);
-      const dv = new DataView(wav);
-      const tag = String.fromCharCode(dv.getUint8(0),dv.getUint8(1),dv.getUint8(2),dv.getUint8(3));
-      const wave = String.fromCharCode(dv.getUint8(8),dv.getUint8(9),dv.getUint8(10),dv.getUint8(11));
-      const size = dv.getUint32(4,true);
-      if (tag!=='RIFF' || wave!=='WAVE') bad('WAV header tags incorrect'); else ok('WAV header OK');
-      const expectedSize = 36 + (sig.length*2);
-      if (size!==expectedSize) bad('WAV chunk size incorrect'); else ok('WAV chunk size correct');
-      const wav0 = encodeWav(new Float32Array(), 48000);
-      if (wav0.byteLength!==44) bad('Zero-length WAV header size incorrect'); else ok('Zero-length WAV header is 44 bytes');
-      const crOnly = "LINE1
-LINE2
-";
-      const crlf = normalizeCRLF(crOnly);
-      if (!/
-/.test(crlf)) bad('normalizeCRLF did not convert CR to CRLF'); else ok('normalizeCRLF converts CR to CRLF');
-    }catch(e){ bad('Exception in tests: '+(e.message||e)); }
-    els.testLog.style.display='block';
-    els.testLog.textContent = log.join('
-');
-  }
-  els.testBtn.addEventListener('click', runTests);
-})();
-</script>
-</body>
-</html>
+    const emit=(freq, units)=>{ let total = spbF*units + carry; let n = Math.floor(total); carry = total - n; const inc = twoPi*freq/sampleRate; for(let i=0;i<n;i++){ out.push(Math.sin(phase)); phase+=i
