--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     :root { --bg:#0e0f12; --panel:#16181d; --ink:#e6e7eb; --muted:#9aa0a6; --accent:#7aa2ff; }
     * { box-sizing: border-box; }
     body { margin:0; font-family: system-ui, Segoe UI, Roboto, Helvetica, Arial; background:var(--bg); color:var(--ink); }
-    header { padding:16px 20px; border-bottom:1px solid #222833; background:linear-gradient(180deg,#12141a,#0e0f12); position:sticky; top:0; z-index:10; }
+    header { padding:16px 20px; border-bottom:1px solid #222833; background:linear-gradient(180deg,#12141a,#0e0f12); position:sticky; top:0; }
     h1 { margin:0; font-size:20px; letter-spacing:.3px; }
     .wrap { padding:12px; display:grid; grid-template-columns: 420px 1fr; gap:12px; }
     @media (max-width: 900px){ .wrap{ grid-template-columns: 1fr; } }
@@ -87,12 +87,19 @@
         </div>
         <div>
           <label>Max duration (sec)</label>
-          <input id="maxSeconds" type="number" value="120" min="10" step="10" />
+          <input id="maxSeconds" type="number" value="600" min="60" step="30" />
         </div>
       </div>
       <div class="row">
-        <div></div>
         <div>
+          <label>Truncate long pieces</label>
+          <select id="truncateMode">
+            <option value="clip" selected>Clip to fit cap</option>
+            <option value="skip">Skip if too long</option>
+          </select>
+        </div>
+        <div>
+          <label>&nbsp;</label>
           <button id="buildBtn" class="primary" style="width:100%">Build WAV</button>
         </div>
       </div>
@@ -162,6 +169,7 @@
     count: document.getElementById('count'),
     gap: document.getElementById('gap'),
     maxSeconds: document.getElementById('maxSeconds'),
+    truncateMode: document.getElementById('truncateMode'),
     testBtn: document.getElementById('testBtn'),
     testLog: document.getElementById('testLog'),
     dataSource: document.getElementById('dataSource'),
@@ -176,8 +184,7 @@
   const bundled = { base:"", items:[], loaded:false };
 
   function toggleBundledUI(){
-    const mode = els.dataSource.value;
-    els.bundledControls.style.display = (mode === 'bundled') ? 'flex' : 'none';
+    els.bundledControls.style.display = (els.dataSource.value === 'bundled') ? 'flex' : 'none';
   }
   toggleBundledUI();
   els.dataSource.addEventListener('change', toggleBundledUI);
@@ -224,7 +231,6 @@
 
   // ====== Helpers ======
   function normalizeCRLF(s){
-    // convert lone CR to CRLF; leave existing CRLF as-is
     return (s || "").replace(/\r(?!\n)/g, "\r\n");
   }
 
@@ -360,8 +366,8 @@
     if (START_LEAD_MS>0) frames.push({type:'hold', sec: START_LEAD_MS/1000});
     for (const raw of text){
       const ch = normalizeChar(raw);
-      if (ch==='\r'){ frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\r'], guardBits: GUARD_CR_BITS}); lastWasCR=true; continue; }
-      if (ch==='\n'){
+      if (ch=== '\r'){ frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\r'], guardBits: GUARD_CR_BITS}); lastWasCR=true; continue; }
+      if (ch=== '\n'){
         if (!lastWasCR) frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\r'], guardBits: GUARD_CR_BITS});
         frames.push({type:'char', code: BAUDOT_TABLE.LTRS['\n'], guardBits: GUARD_LF_BITS}); lastWasCR=false; if (LINE_LEAD_MS>0) frames.push({type:'hold', sec: LINE_LEAD_MS/1000}); continue;
       }
@@ -389,151 +395,4 @@
     const { baud, mark, space, stopBits, sampleRate, stretch = DEFAULT_STRETCH } = opts;
     const twoPi = 2*Math.PI; const spbF = (sampleRate/baud)*stretch; let carry=0, phase=0; const out=[];
     const emit=(freq, units)=>{ let total = spbF*units + carry; let n = Math.floor(total); carry = total - n; const inc = twoPi*freq/sampleRate; for(let i=0;i<n;i++){ out.push(Math.sin(phase)); phase+=inc; if (phase>=twoPi) phase-=twoPi; } };
-    for (const f of frames){ if (f.type==='hold'){ emit(opts.mark, f.sec*baud); continue; } if (f.type==='char'){ const code=f.code & 0x1F; emit(space,1); for(let i=0;i<5;i++){ const bit=(code>>i)&1; emit(bit?mark:space,1);} emit(mark, stopBits); if (f.guardBits&&f.guardBits>0) emit(mark, f.guardBits); } }
-    emit(mark,2.0); return out;
-  }
-
-  function encodeWav(samples, sampleRate){
-    const buffer = new ArrayBuffer(44 + samples.length*2); const view = new DataView(buffer);
-    const putStr=(o,s)=>{ for(let i=0;i<s.length;i++) view.setUint8(o+i, s.charCodeAt(i)); };
-    putStr(0,'RIFF'); view.setUint32(4, 36 + samples.length*2, true);
-    putStr(8,'WAVE');
-    putStr(12,'fmt '); view.setUint32(16,16,true);
-    view.setUint16(20,1,true); view.setUint16(22,1,true);
-    view.setUint32(24,sampleRate,true); view.setUint32(28,sampleRate*2,true);
-    view.setUint16(32,2,true); view.setUint16(34,16,true);
-    putStr(36,'data'); view.setUint32(40, samples.length*2, true);
-    for(let i=0;i<samples.length;i++){
-      const s=Math.max(-1,Math.min(1,samples[i]))*32767;
-      view.setInt16(44+i*2, s|0, true);
-    }
-    return buffer;
-  }
-
-  // ====== Build one big WAV (silence between pieces; full text) ======
-  els.buildBtn.addEventListener('click', async () => {
-    try{
-      els.buildBtn.disabled = true; els.downloadWrap.textContent = ""; els.player.src = "";
-      const n = Math.max(1, Math.min(500, parseInt(els.count.value||"25",10)));
-      const gapSec = Math.max(0, parseFloat(els.gap.value||"2"));
-      const maxSec = Math.max(10, parseFloat(els.maxSeconds.value||"120"));
-
-      setStatus('Sampling artwork…');
-      const picks = await sampleRandomArt(n);
-      if (!picks.length){ setStatus('No items to process'); return; }
-
-      els.list.innerHTML = picks.map(p=>{
-        const href = (els.dataSource.value==='bundled' && bundled.base) ? `${bundled.base}/${p.pagePath}` : (p.originUrl||p.pagePath);
-        return `<li><a href="${href}" target="_blank" rel="noopener">${p.dir}/${p.filename}</a></li>`;
-      }).join('');
-      els.countInfo.textContent = `(${picks.length})`;
-
-      const baud  = parseFloat(els.baud.value||"45.45");
-      const stopB = parseFloat(els.stopBits.value||"1.5");
-      const mark  = parseFloat(els.mark.value||"2125");
-      const space = parseFloat(els.space.value||"2295");
-
-      const sr = getSampleRate();
-      const silence = new Float32Array(Math.max(0, Math.round(sr * gapSec)));
-      const pcm = [];
-
-      let used = 0; let accSamples = 0; const MAX_SAMPLES = Math.floor(sr * maxSec);
-      for (let i=0;i<picks.length;i++){
-        setStatus(`Fetching ${i+1}/${picks.length}… ${picks[i].dir}/${picks[i].filename}`);
-        let raw="";
-        if (els.dataSource.value === 'bundled') raw = await fetchArtTextBundled(picks[i].pagePath);
-        else raw = await fetchArtTextRemote(picks[i].pagePath);
-        if (!raw || !raw.trim()) continue;
-        const text = normalizeText(raw);
-        const frames = buildBaudotFramesFromText(text);
-        const sig = afskFromFrames(frames, { baud: baud, mark: mark, space: space, stopBits: stopB, sampleRate: sr });
-        if (!sig.length) continue;
-        const extra = (i < picks.length - 1 ? silence.length : 0);
-        if (accSamples + sig.length + extra > MAX_SAMPLES){ setStatus(`Duration cap reached (~${maxSec}s). Stopping at ${used} items.`); break; }
-        const chunk = new Float32Array(sig);
-        pcm.push(chunk); used++; accSamples += chunk.length;
-        if (gapSec > 0 && i < picks.length - 1){ pcm.push(silence); accSamples += silence.length; }
-      }
-
-      if (!used){ setStatus('All fetched items were empty or over duration cap.'); return; }
-
-      setStatus('Encoding WAV…');
-      const total = pcm.reduce((acc,a)=> acc + (a && a.length ? a.length : 0), 0);
-      if (!Number.isFinite(total) || total <= 0){ throw new Error('Internal: invalid PCM size'); }
-      const out = new Float32Array(total); let off=0; for (const a of pcm){ if (!a) continue; out.set(a, off); off += a.length; }
-      const wav = encodeWav(out, sr);
-      const blob = new Blob([wav], { type:'audio/wav' });
-      const url = URL.createObjectURL(blob);
-      els.player.src = url; els.player.load();
-      const minutes = (out.length/sr)/60;
-      els.downloadWrap.innerHTML = `<a download="rtty_art_${used}.wav" href="${url}">Download WAV</a> · items: ${used} · duration ~ ${minutes.toFixed(1)} min · mode: ${els.dataSource.value}`;
-      setStatus('Ready');
-    }catch(e){
-      console.error(e); setStatus('Error: ' + (e.message||e));
-    }finally{
-      els.buildBtn.disabled = false;
-    }
-  });
-
-  // ====== Self-tests ======
-  function runTests(){
-    const log=[]; const ok=(m)=>log.push('✅ '+m); const bad=(m)=>log.push('❌ '+m);
-    try{
-      // 1) CRLF preservation
-      const tCRLF = normalizeText("A\r\nB");
-      if (/A\r\nB/.test(tCRLF)) ok('CRLF preserved by normalizeText'); else bad('CRLF not preserved');
-
-      // 2) Backslash mapping to slash
-      const tSlash = normalizeText("X\\Y");
-      if (tSlash.includes('X/Y')) ok('Backslash mapped to slash'); else bad('Backslash mapping failed');
-
-      // 3) Replacement map sanity
-      const sample = normalizeText("~@%{}[]|^*");
-      const expect = "-AO()()/-X"; // ~ -> -, @ -> A, % -> O, { } -> ( ), [ ] -> ( ), | -> /, ^ -> -, * -> X
-      if (sample === expect) ok('Replacement map works'); else bad('Replacement map wrong: ' + sample + ' != ' + expect);
-
-      // 4) Allowed charset only
-      const allowed = new Set((printableSet + "\r\n").split(''));
-      if ([...sample].every(ch => allowed.has(ch))) ok('normalizeText emits only allowed chars'); else bad('normalizeText emitted disallowed chars');
-
-      // 5) BAUDOT table spot checks
-      if (BAUDOT_TABLE.LTRS['A']===0b00011) ok('BAUDOT LTRS A'); else bad('BAUDOT LTRS A code wrong');
-      if ('1' in BAUDOT_TABLE.FIGS) ok('BAUDOT FIGS 1 present'); else bad('BAUDOT FIGS 1 missing');
-
-      // 6) Frame build and FIGS shift for digits
-      const frames = buildBaudotFramesFromText("HI\r\n");
-      if (frames.length>=10) ok('Frames built'); else bad('Frames too short');
-      const fNums = buildBaudotFramesFromText("12\r\n");
-      const sawFIGS = fNums.some(f => f.type==='char' && f.code===FIGS);
-      if (sawFIGS) ok('FIGS shift emitted for digits'); else bad('FIGS shift not emitted for digits');
-
-      // 7) AFSK + WAV header sanity
-      const sig = afskFromFrames(frames, { baud:45.45, mark:2125, space:2295, stopBits:1.5, sampleRate:48000 });
-      if (sig.length>0) ok('AFSK produced samples'); else bad('AFSK produced empty signal');
-      const wav = encodeWav(new Float32Array(sig), 48000);
-      const dv = new DataView(wav);
-      const tag = String.fromCharCode(dv.getUint8(0),dv.getUint8(1),dv.getUint8(2),dv.getUint8(3));
-      const wave = String.fromCharCode(dv.getUint8(8),dv.getUint8(9),dv.getUint8(10),dv.getUint8(11));
-      const size = dv.getUint32(4,true);
-      const expectedSize = 36 + (sig.length*2);
-      if (tag==='RIFF' && wave==='WAVE') ok('WAV header OK'); else bad('WAV header tags incorrect');
-      if (size===expectedSize) ok('WAV chunk size correct'); else bad('WAV chunk size incorrect');
-
-      // 8) normalizeCRLF converts lone CR to CRLF
-      const crOnly = "LINE1\rLINE2\r";
-      const crlf = normalizeCRLF(crOnly);
-      if (/LINE1\r\nLINE2\r\n$/.test(crlf)) ok('normalizeCRLF converts CR to CRLF'); else bad('normalizeCRLF failed');
-
-      // 9) Duration cap math sanity
-      const sr=48000, maxS=10, chars=60; // estimate only
-      const bitsPerChar=7.5; const samplesPerBit=sr/45.45; const est = Math.floor(bitsPerChar*samplesPerBit*chars);
-      if (est>0 && Number.isFinite(est)) ok('duration estimate sane'); else bad('duration estimate bad');
-    }catch(e){ bad('Exception in tests: '+(e.message||e)); }
-    els.testLog.style.display='block';
-    els.testLog.textContent = log.join('\n');
-  }
-  els.testBtn.addEventListener('click', runTests);
-})();
-</script>
-</body>
-</html>
+    for (const f of frames){ if (f.type==='hold'){ emit(opts.mark, f.sec*baud); continue; } if (f.type==='char'){ const code=f.code & 0x1F; emit*
